fixes km-btn, carousel element alignments, user-select stuff

--- a/project/assets/css/main.less
+++ b/project/assets/css/main.less
@@ -84,6 +84,7 @@ a:hover { text-decoration: none; }
 #carousel {
     border: 3px solid rgba(0, 0, 0, 0.05);
     border-radius: 3px;
+    .user-select(none);
 
     .plumeria {
         position: absolute;
@@ -102,31 +103,26 @@ a:hover { text-decoration: none; }
             font-family: SaintAndrewsRegular, serif;
             font-size: 64px;
             color: #807c77;
+            line-height: 1;
         }
     }
 
     .hand-to-face {
         position: absolute;
-        top: 57px;
-        right: 41px;
-
-
-        .km-btn {
-            margin-left: 60px;
-        }
+        top: 20px;
+        right: 40px;
+        text-align: right;
     }
 
     .face-to-hand {
         position: absolute;
-        right: 13px; // this makes text centered, nothing else
-        left: 93px;
-        top: 33px;
+        position: absolute;
+        top: 20px;
+        left: 30px;
 
-        .km-btn {
-            margin-left: 133px;
+        .fancy {
+            font-size: 120px;
         }
-
-        .fancy { font-size: 120px; }
     }
 }
 
@@ -142,6 +138,7 @@ a:hover { text-decoration: none; }
         min-width: 150px;
         text-align: center;
         cursor: pointer;
+        .user-select(none);
 
         .image-container {
             height: 140px;
@@ -369,6 +366,7 @@ a:hover { text-decoration: none; }
 }
 
 .km-btn {
+    position: relative;
     background-color: #4c834e;
     border: 0;
     padding: 8px 35px;
@@ -377,6 +375,9 @@ a:hover { text-decoration: none; }
     font-family: CandaraBold, sans-serif;
     font-size: 18px;
     color: #fff;
+    cursor: pointer;
+    outline: none;
+    .user-select(none);
 
     .first-letter-larger;
 
@@ -388,7 +389,8 @@ a:hover { text-decoration: none; }
     &:active {
         .box-shadow(2px 2px 0, #d9d5d2);
         background-color: #335835;
-        margin: -1px 0 0 1px;
+        top: 1px;
+        left: 1px;
     }
 
     p { display: inline-block; .first-letter-larger; }
@@ -449,6 +451,12 @@ a:hover { text-decoration: none; }
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
+.user-select(@arg) {
+    -webkit-user-select: @arg;
+    -moz-user-select: @arg;
+    -ms-user-select: @arg;
+    user-select: @arg;
+}
 
 /************************************************************************
 * Utilities
